Fixed insight cards spacing and added a 4th

--- a/react-front-end/src/styles/App.css
+++ b/react-front-end/src/styles/App.css
@@ -127,168 +127,6 @@ div.ant-card {
     font-size: 1.2em;
 }
 
-/* INSIGHT 1 */
-
-.top-activity-badge {
-    display: inline-block;
-    position: relative;
-    border-radius: 50%;
-    border: 5px double white;
-    background: #fbc658;
-    padding: 12.5px;
-    text-align: center;
-    height: 100px;
-    width: 100px;
-    -webkit-transition: background-color 1s ease-out;
-    -moz-transition: background-color 1s ease-out;
-    -o-transition: background-color 1s ease-out;
-    transition: background-color 1s ease-out;
-}
-
-.top-activity-badge .mood-up {
-    display: none;
-    font-size: 20px;
-    padding-top: 10px;
-    color: #fefefe;
-}
-
-.top-activity-badge img {
-    height: 60px;
-    width: 60px;
-}
-
-.top-activity-badge:hover {
-    background: #4eba64;
-    cursor: pointer;
-}
-
-.top-activity-badge:hover .mood-up {
-    display: inline;
-}
-
-.top-activity-badge:hover img {
-    display: none;
-}
-
-.top-activity-text {
-    font-size: 16px;
-    padding: 24px 0px 0px;
-}
-
-
-/* .top-activity-text strong{
-    color: #4EBA64;
-} */
-
-
-/* INSIGHT 2 */
-
-.productivity-badge {
-    display: inline-block;
-    position: relative;
-    border-radius: 50%;
-    border: 5px double white;
-    background: #51cbcf;
-    padding: 12.5px;
-    text-align: center;
-    height: 100px;
-    width: 100px;
-    -webkit-transition: background-color 1s ease-out;
-    -moz-transition: background-color 1s ease-out;
-    -o-transition: background-color 1s ease-out;
-    transition: background-color 1s ease-out;
-}
-
-.productivity-badge .streak-up {
-    display: none;
-    font-size: 20px;
-    padding-top: 10px;
-    color: #fefefe;
-}
-
-.productivity-badge img {
-    height: 60px;
-    width: 60px;
-}
-
-.productivity-badge:hover {
-    background: #b917b9;
-    cursor: pointer;
-}
-
-.productivity-badge:hover .streak-up {
-    display: inline;
-}
-
-.productivity-badge:hover img {
-    display: none;
-}
-
-.productivity-text {
-    font-size: 16px;
-    padding: 24px 0px 0px;
-}
-
-
-/*
-.productivity-text strong{
-    color: #51cbcf;
-} */
-
-
-/* INSIGHT 3 */
-
-.weekly-badge {
-    display: inline-block;
-    position: relative;
-    border-radius: 50%;
-    border: 5px double white;
-    background: #ef8157;
-    padding: 12.5px;
-    text-align: center;
-    height: 100px;
-    width: 100px;
-    -webkit-transition: background-color 1s ease-out;
-    -moz-transition: background-color 1s ease-out;
-    -o-transition: background-color 1s ease-out;
-    transition: background-color 1s ease-out;
-}
-
-.weekly-badge .sofdev-up {
-    display: none;
-    font-size: 20px;
-    padding-top: 10px;
-    color: #fefefe;
-}
-
-.weekly-badge img {
-    height: 60px;
-    width: 60px;
-}
-
-.weekly-badge:hover {
-    background: #66615a;
-    cursor: pointer;
-}
-
-.weekly-badge:hover .sofdev-up {
-    display: inline;
-}
-
-.weekly-badge:hover img {
-    display: none;
-}
-
-.weekly-text {
-    font-size: 16px;
-    padding: 24px 0px 0px;
-}
-
-
-/* .weekly-text strong{
-    color: #EF8157;
-} */
-
 
 /* MOOD DISPLAY  */
 
@@ -355,7 +193,8 @@ div #productivity-chart,
 #category-chart,
 #insight1,
 #insight2,
-#insight3 {
+#insight3,
+#insight4 {
     display: flex;
     justify-content: center;
 }
