--- a/react-front-end/src/styles/Reflection.css
+++ b/react-front-end/src/styles/Reflection.css
@@ -76,9 +76,8 @@
 }
 
 .sentibot-submission-score .robot {
-  transform: translate(13em, 0em);
-  width: 20vw;
-  height: 20vw;
+  transform: translate(0em, 0em);
+  height: 25vw;
 }
 
 .ant-card-body .CircularProgressbar {
